# CMine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
data/: FileWorld.cpp  FileWorld.h
encryption/: ConnEncrInfo.h  ServerEnc.cpp  ServerEnc.h
nbt/: NbtDocument.h  NbtTypes.cpp  NbtTypes.h
packets/: Packets.h
packets/handshaking/: Packets.h  SBHandshake.h
packets/login/: CBEncrReq.h  CBLoginDisconnect.h  CBLoginReq.h  CBLoginSuccess.h  CBSetCompr.h  Packets.h  SBEncrResp.h  SBLoginResp.h  SBLoginStart.h
packets/play/: CBAckPlayerDig.h  CBAdvancements.h  CBBlockAction.h  CBBlockBreakAnim.h  CBBlockChange.h  CBBlockEntityData.h  CBBossBar.h  CBCamera.h  CBChangeGameState.h  CBChatMessage.h  CBChunkData.h  CBCollectItem.h  CBCombatEvent.h  CBCraftRecipeResp.h  CBDeclareCommands.h  CBDeclareRecipes.h  CBDestroyEntities.h  CBDisconnect.h  CBDisplayScoreboard.h  CBEffect.h  CBEntityAnim.h  CBEntityAttach.h  CBEntityEffect.h  CBEntityEquipment.h  CBEntityHeadLook.h  CBEntityMetadata.h  CBEntityMovement.h  CBEntityPos.h  CBEntityPosRot.h  CBEntityProperties.h  CBEntityRot.h  CBEntitySoundEffect.h  CBEntityStatus.h  CBEntityTeleport.h  CBEntityVelocity.h  CBExplosion.h  CBFacePlayer.h  CBHeldItemChange.h  CBJoinGame.h  CBKeepalive.h  (+100 more)
packets/status/: CBPong.h  CBResponse.h  Packets.h  SBPing.h  (+1 more)
types/: SocketConnection.cpp  SocketConnection.h  SocketIStream.h  SocketOStream.h  SocketPacket.h  SocketPacketIStream.cpp  SocketPacketIStream.h  SocketPacketOStream.cpp  SocketPacketOStream.h  SocketPrimitives.h  SocketServer.cpp  SocketServer.h
